--- a/exmp.ipynb
+++ b/exmp.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "4                    o                   b   True  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -458,44 +458,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>102</th>\n",
+       "      <td>7.1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>2.1</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>12</th>\n",
        "      <td>4.8</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>3.9</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>True</td>\n",
+       "      <th>141</th>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
@@ -506,34 +490,50 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.4</td>\n",
+       "      <th>79</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.7</td>\n",
        "      <td>0.3</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>6.8</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>53</th>\n",
        "      <td>5.5</td>\n",
-       "      <td>2.1</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.6</td>\n",
+       "      <th>68</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>1.5</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -543,19 +543,19 @@
       ],
       "text/plain": [
        "     sepal_length  sepal_width  petal_length  petal_width  species\n",
-       "110           6.5          3.2           5.1          2.0    False\n",
-       "87            6.3          2.3           4.4          1.3    False\n",
-       "126           6.2          2.8           4.8          1.8    False\n",
-       "59            5.2          2.7           3.9          1.4    False\n",
-       "20            5.4          3.4           1.7          0.2     True\n",
+       "102           7.1          3.0           5.9          2.1    False\n",
+       "12            4.8          3.0           1.4          0.1     True\n",
+       "141           6.9          3.1           5.1          2.3    False\n",
        "119           6.0          2.2           5.0          1.5    False\n",
-       "6             4.6          3.4           1.4          0.3     True\n",
-       "91            6.1          3.0           4.6          1.4    False\n",
-       "112           6.8          3.0           5.5          2.1    False\n",
-       "54            6.5          2.8           4.6          1.5    False"
+       "79            5.7          2.6           3.5          1.0    False\n",
+       "2             4.7          3.2           1.3          0.2     True\n",
+       "140           6.7          3.1           5.6          2.4    False\n",
+       "18            5.7          3.8           1.7          0.3     True\n",
+       "53            5.5          2.3           4.0          1.3    False\n",
+       "68            6.2          2.2           4.5          1.5    False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -658,83 +658,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>224</th>\n",
-       "      <td>58.000</td>\n",
+       "      <th>60</th>\n",
+       "      <td>45.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>582</td>\n",
+       "      <td>7702</td>\n",
        "      <td>1</td>\n",
        "      <td>25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>504000.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>138</td>\n",
+       "      <td>1</td>\n",
+       "      <td>390000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>139</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>205</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>55.000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>180</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>0</td>\n",
-       "      <td>263358.03</td>\n",
-       "      <td>1.18</td>\n",
-       "      <td>137</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>211</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>60.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3964</td>\n",
-       "      <td>1</td>\n",
-       "      <td>62</td>\n",
-       "      <td>0</td>\n",
-       "      <td>263358.03</td>\n",
-       "      <td>6.80</td>\n",
-       "      <td>146</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>43</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>45.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1</td>\n",
        "      <td>60</td>\n",
        "      <td>1</td>\n",
-       "      <td>377000.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>50.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>582</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>279000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>134</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>186</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>60.667</td>\n",
+       "      <th>59</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>364</td>\n",
        "      <td>1</td>\n",
-       "      <td>151</td>\n",
+       "      <td>20</td>\n",
        "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1</td>\n",
-       "      <td>201000.00</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>254000.0</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>136</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2413</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>140</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>280</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>337</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>390000.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>144</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>172</td>\n",
+       "      <td>256</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -742,29 +742,29 @@
        "</div>"
       ],
       "text/plain": [
-       "        age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
-       "224  58.000        0                       582         1                 25   \n",
-       "239  55.000        1                       180         0                 45   \n",
-       "52   60.000        0                      3964         1                 62   \n",
-       "201  45.000        0                       308         1                 60   \n",
-       "188  60.667        1                       151         1                 40   \n",
+       "      age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
+       "60   45.0        0                      7702         1                 25   \n",
+       "198  50.0        1                       582         1                 20   \n",
+       "59   72.0        0                       364         1                 20   \n",
+       "297  45.0        0                      2413         0                 38   \n",
+       "289  90.0        1                       337         0                 38   \n",
        "\n",
        "     high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
-       "224                    0  504000.00              1.00           138    1   \n",
-       "239                    0  263358.03              1.18           137    1   \n",
-       "52                     0  263358.03              6.80           146    0   \n",
-       "201                    1  377000.00              1.00           136    1   \n",
-       "188                    1  201000.00              1.00           136    0   \n",
+       "60                     1   390000.0               1.0           139    1   \n",
+       "198                    1   279000.0               1.0           134    0   \n",
+       "59                     1   254000.0               1.3           136    1   \n",
+       "297                    0   140000.0               1.4           140    1   \n",
+       "289                    0   390000.0               0.9           144    0   \n",
        "\n",
        "     smoking  time  DEATH_EVENT  \n",
-       "224        0   205            0  \n",
-       "239        1   211            0  \n",
-       "52         0    43            1  \n",
-       "201        0   186            0  \n",
-       "188        0   172            0  "
+       "60         0    60            1  \n",
+       "198        0   186            0  \n",
+       "59         1    59            1  \n",
+       "297        1   280            0  \n",
+       "289        0   256            0  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,13 +806,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.6778\n",
+      "f1 score: 0.4268\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "print(\"accuracy:\",round(accuracy_score(y_test, pat_cls.predictions),4))\n",
-    "print(\"f1 score:\",round(f1_score(y_test, pat_cls.predictions),4))"
+    "print(\"f1 score:\",round(f1_score(y_test, pat_cls.predictions,average='macro'),4))"
    ]
   },
   {
@@ -839,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
