--- a/exmp.ipynb
+++ b/exmp.ipynb
@@ -458,44 +458,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>7.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>141</th>\n",
-       "      <td>6.9</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
+       "      <th>18</th>\n",
        "      <td>5.7</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -506,36 +474,68 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>140</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.8</td>\n",
+       "      <th>23</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.3</td>\n",
        "      <td>1.7</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.3</td>\n",
+       "      <th>52</th>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>122</th>\n",
+       "      <td>7.7</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>5.2</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -543,16 +543,16 @@
       ],
       "text/plain": [
        "     sepal_length  sepal_width  petal_length  petal_width  species\n",
-       "102           7.1          3.0           5.9          2.1    False\n",
-       "12            4.8          3.0           1.4          0.1     True\n",
-       "141           6.9          3.1           5.1          2.3    False\n",
-       "119           6.0          2.2           5.0          1.5    False\n",
-       "79            5.7          2.6           3.5          1.0    False\n",
-       "2             4.7          3.2           1.3          0.2     True\n",
-       "140           6.7          3.1           5.6          2.4    False\n",
        "18            5.7          3.8           1.7          0.3     True\n",
-       "53            5.5          2.3           4.0          1.3    False\n",
-       "68            6.2          2.2           4.5          1.5    False"
+       "2             4.7          3.2           1.3          0.2     True\n",
+       "23            5.1          3.3           1.7          0.5     True\n",
+       "52            6.9          3.1           4.9          1.5    False\n",
+       "122           7.7          2.8           6.7          2.0    False\n",
+       "109           7.2          3.6           6.1          2.5    False\n",
+       "24            4.8          3.4           1.9          0.2     True\n",
+       "44            5.1          3.8           1.9          0.4     True\n",
+       "32            5.2          4.1           1.5          0.1     True\n",
+       "16            5.4          3.9           1.3          0.4     True"
       ]
      },
      "execution_count": 12,
@@ -658,83 +658,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>45.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7702</td>\n",
+       "      <th>191</th>\n",
+       "      <td>64.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>390000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>139</td>\n",
-       "      <td>1</td>\n",
+       "      <td>62</td>\n",
        "      <td>0</td>\n",
        "      <td>60</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>309000.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>135</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>174</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>50.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>582</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>279000.0</td>\n",
+       "      <th>248</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>624</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>301000.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>134</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>186</td>\n",
+       "      <td>142</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>214</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>72.0</td>\n",
+       "      <th>54</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>260</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
        "      <td>0</td>\n",
-       "      <td>364</td>\n",
+       "      <td>255000.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>132</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>254000.0</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>136</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>59</td>\n",
+       "      <td>45</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>297</th>\n",
+       "      <th>107</th>\n",
        "      <td>45.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2413</td>\n",
-       "      <td>0</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0</td>\n",
-       "      <td>140000.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>140</td>\n",
        "      <td>1</td>\n",
+       "      <td>1876</td>\n",
        "      <td>1</td>\n",
-       "      <td>280</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>226000.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>138</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>88</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>289</th>\n",
-       "      <td>90.0</td>\n",
+       "      <th>147</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1610</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>242000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>137</td>\n",
        "      <td>1</td>\n",
-       "      <td>337</td>\n",
        "      <td>0</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0</td>\n",
-       "      <td>390000.0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>144</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>256</td>\n",
+       "      <td>113</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -743,25 +743,25 @@
       ],
       "text/plain": [
        "      age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
-       "60   45.0        0                      7702         1                 25   \n",
-       "198  50.0        1                       582         1                 20   \n",
-       "59   72.0        0                       364         1                 20   \n",
-       "297  45.0        0                      2413         0                 38   \n",
-       "289  90.0        1                       337         0                 38   \n",
+       "191  64.0        1                        62         0                 60   \n",
+       "248  40.0        0                       624         0                 35   \n",
+       "54   60.0        1                       260         1                 38   \n",
+       "107  45.0        1                      1876         1                 35   \n",
+       "147  64.0        0                      1610         0                 60   \n",
        "\n",
        "     high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
-       "60                     1   390000.0               1.0           139    1   \n",
-       "198                    1   279000.0               1.0           134    0   \n",
-       "59                     1   254000.0               1.3           136    1   \n",
-       "297                    0   140000.0               1.4           140    1   \n",
-       "289                    0   390000.0               0.9           144    0   \n",
+       "191                    0   309000.0               1.5           135    0   \n",
+       "248                    0   301000.0               1.0           142    1   \n",
+       "54                     0   255000.0               2.2           132    0   \n",
+       "107                    0   226000.0               0.9           138    1   \n",
+       "147                    0   242000.0               1.0           137    1   \n",
        "\n",
        "     smoking  time  DEATH_EVENT  \n",
-       "60         0    60            1  \n",
-       "198        0   186            0  \n",
-       "59         1    59            1  \n",
-       "297        1   280            0  \n",
-       "289        0   256            0  "
+       "191        0   174            0  \n",
+       "248        1   214            0  \n",
+       "54         1    45            1  \n",
+       "107        0    88            0  \n",
+       "147        0   113            0  "
       ]
      },
      "execution_count": 17,
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
