--- a/exmp.ipynb
+++ b/exmp.ipynb
@@ -871,7 +871,7 @@
    "source": [
     "def model_test_CV(X, y, cat_cols=None, method=\"standard\", alpha=0.,\n",
     "                  kde_bandwidth=1.0, kde_kernel='gaussian', kde_leaf_size=40,\n",
-    "                  kde_classwise=False, n_splits=5, seed=42):\n",
+    "                  kde_classwise=False, scale_density=True, n_splits=5, seed=42):\n",
     "    kf = KFold(n_splits=n_splits, random_state=seed, shuffle=True)\n",
     "    Accuracy = []\n",
     "    F1_score = []\n",
@@ -881,15 +881,13 @@
     "                                                     categorical=cat_cols, method=method,\n",
     "                                                     alpha=alpha, kde_bandwidth=kde_bandwidth,\n",
     "                                                     kde_kernel=kde_kernel, kde_leaf_size=kde_leaf_size,\n",
-    "                                                     kde_classwise=kde_classwise)\n",
+    "                                                     kde_classwise=kde_classwise, scale_density=scale_density)\n",
     "        start = time.time()\n",
     "        pat_cls.predict(X[test_index])\n",
     "        end = time.time()\n",
     "        Accuracy.append(round(accuracy_score(y[test_index], pat_cls.predictions),4))\n",
     "        F1_score.append(round(f1_score(y[test_index], pat_cls.predictions, average='macro'),4))\n",
     "        exec_time.append(round(end-start, 4))\n",
-    "        \n",
-    "        #print(list(map(lambda x: (x.shape[0], x.max(), x.min(),abs(x.max()-x.min()) > 1e-6), pat_cls.density)))\n",
     "    \n",
     "    Accuracy.append(np.mean(Accuracy)); F1_score.append(np.mean(F1_score)); exec_time.append(np.mean(exec_time))\n",
     "    return pd.DataFrame(zip(Accuracy,F1_score,exec_time),\n",
@@ -908,46 +906,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = winered_df.drop(\"quality\",axis=1).values\n",
-    "y_train = winered_df[\"quality\"].values\n",
-    "winered_results = model_test_CV(X_train,y_train,method=\"density-based\",kde_classwise=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "k-fold: 100%|██████████| 5/5 [03:25<00:00, 41.18s/it]\n",
-      "k-fold: 100%|██████████| 5/5 [03:26<00:00, 41.31s/it]\n",
-      "k-fold: 100%|██████████| 5/5 [03:25<00:00, 41.04s/it]\n",
-      "k-fold: 100%|██████████| 5/5 [03:25<00:00, 41.20s/it]\n"
+      "k-fold: 100%|██████████| 5/5 [03:28<00:00, 41.72s/it]\n",
+      "k-fold: 100%|██████████| 5/5 [03:28<00:00, 41.61s/it]\n",
+      "k-fold: 100%|██████████| 5/5 [03:27<00:00, 41.49s/it]\n",
+      "k-fold: 100%|██████████| 5/5 [03:26<00:00, 41.38s/it]\n",
+      "k-fold: 100%|██████████| 5/5 [03:32<00:00, 42.45s/it]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1 score</th>\n",
+       "      <th>time (s)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>standard</th>\n",
+       "      <td>0.37026</td>\n",
+       "      <td>0.23404</td>\n",
+       "      <td>41.71646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>standard-support</th>\n",
+       "      <td>0.25202</td>\n",
+       "      <td>0.21758</td>\n",
+       "      <td>41.60468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ratio-support</th>\n",
+       "      <td>0.11254</td>\n",
+       "      <td>0.12824</td>\n",
+       "      <td>41.48826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>density-based</th>\n",
+       "      <td>0.33080</td>\n",
+       "      <td>0.25058</td>\n",
+       "      <td>41.37926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>density-based classwise</th>\n",
+       "      <td>0.25264</td>\n",
+       "      <td>0.22812</td>\n",
+       "      <td>42.44556</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Accuracy  F1 score  time (s)\n",
+       "standard                  0.37026   0.23404  41.71646\n",
+       "standard-support          0.25202   0.21758  41.60468\n",
+       "ratio-support             0.11254   0.12824  41.48826\n",
+       "density-based             0.33080   0.25058  41.37926\n",
+       "density-based classwise   0.25264   0.22812  42.44556"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "X_train = winered_df.drop(\"quality\",axis=1).values\n",
+    "y_train = winered_df[\"quality\"].values\n",
     "methods = [\"standard\", \"standard-support\", \"ratio-support\", \"density-based\"]\n",
     "result = []\n",
     "for m in methods:\n",
-    "    res = model_test_CV(X_train,y_train,method=m)\n",
+    "    res = model_test_CV(X_train,y_train,method=m, scale_density=False)\n",
     "    result.append(res.loc[\"mean\"].values)\n",
     "result=pd.DataFrame(result, index=methods,columns=[\"Accuracy\",\"F1 score\", \"time (s)\"])\n",
-    "result.loc[\"density-based classwise\"] = winered_results.loc[\"mean\"]\n",
+    "result.loc[\"density-based classwise\"] = model_test_CV(X_train,y_train,\n",
+    "                                                      method=\"density-based\",\n",
+    "                                                      kde_classwise=True,\n",
+    "                                                      scale_density=False).loc[\"mean\"]\n",
     "display(result)\n",
     "result.to_csv(\"D:/University/masters thesis/csv results/red_wine_res.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,18 +1024,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.12it/s]\n",
-      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  7.61it/s]\n",
-      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.65it/s]\n",
-      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.80it/s]\n",
-      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.80it/s]\n"
+      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.71it/s]\n",
+      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.67it/s]\n",
+      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.45it/s]\n",
+      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.88it/s]\n",
+      "k-fold: 100%|██████████| 5/5 [00:00<00:00,  8.18it/s]\n"
      ]
     },
     {
@@ -1003,31 +1069,31 @@
        "      <th>standard</th>\n",
        "      <td>0.91998</td>\n",
        "      <td>0.75474</td>\n",
-       "      <td>0.1202</td>\n",
+       "      <td>0.11200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>standard-support</th>\n",
        "      <td>0.86000</td>\n",
        "      <td>0.86172</td>\n",
-       "      <td>0.1280</td>\n",
+       "      <td>0.11300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ratio-support</th>\n",
        "      <td>0.94666</td>\n",
        "      <td>0.94918</td>\n",
-       "      <td>0.1122</td>\n",
+       "      <td>0.11520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>density-based</th>\n",
-       "      <td>0.88666</td>\n",
-       "      <td>0.88028</td>\n",
-       "      <td>0.1106</td>\n",
+       "      <td>0.87332</td>\n",
+       "      <td>0.87416</td>\n",
+       "      <td>0.10982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>density-based classwise</th>\n",
-       "      <td>0.88668</td>\n",
-       "      <td>0.87854</td>\n",
-       "      <td>0.1106</td>\n",
+       "      <td>0.87332</td>\n",
+       "      <td>0.86908</td>\n",
+       "      <td>0.11880</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1035,11 +1101,11 @@
       ],
       "text/plain": [
        "                         Accuracy  F1 score  time (s)\n",
-       "standard                  0.91998   0.75474    0.1202\n",
-       "standard-support          0.86000   0.86172    0.1280\n",
-       "ratio-support             0.94666   0.94918    0.1122\n",
-       "density-based             0.88666   0.88028    0.1106\n",
-       "density-based classwise   0.88668   0.87854    0.1106"
+       "standard                  0.91998   0.75474   0.11200\n",
+       "standard-support          0.86000   0.86172   0.11300\n",
+       "ratio-support             0.94666   0.94918   0.11520\n",
+       "density-based             0.87332   0.87416   0.10982\n",
+       "density-based classwise   0.87332   0.86908   0.11880"
       ]
      },
      "metadata": {},
@@ -1052,12 +1118,13 @@
     "methods = [\"standard\", \"standard-support\", \"ratio-support\", \"density-based\"]\n",
     "result = []\n",
     "for m in methods:\n",
-    "    res = model_test_CV(X_train,y_train,method=m)\n",
+    "    res = model_test_CV(X_train,y_train,method=m, scale_density=False)\n",
     "    result.append(res.loc[\"mean\"].values)\n",
     "result=pd.DataFrame(result, index=methods,columns=[\"Accuracy\",\"F1 score\", \"time (s)\"])\n",
     "result.loc[\"density-based classwise\"] = model_test_CV(X_train,y_train,\n",
     "                                                      method=\"density-based\",\n",
-    "                                                      kde_classwise=True).loc[\"mean\"]\n",
+    "                                                      kde_classwise=True,\n",
+    "                                                      scale_density=False).loc[\"mean\"]\n",
     "display(result)\n",
     "result.to_csv(\"D:/University/masters thesis/csv results/irid_res.csv\")"
    ]
