--- a/exmp.ipynb
+++ b/exmp.ipynb
@@ -1239,13 +1239,13 @@
     "display(result)\n",
     "result.to_csv(\"D:/University/masters thesis/csv results/red_wine_kernels_res.csv\")\n",
     "\n",
-    "# result = []\n",
-    "# for k in kernels:\n",
-    "#     res = model_test_CV(X_train,y_train,method=\"density-based\",kde_kernel=k, kde_classwise=True)\n",
-    "#     result.append(res.loc[\"mean\"].values)\n",
-    "# result=pd.DataFrame(result, index=kernels,columns=[\"Accuracy\",\"F1 score\", \"time (sec.)\"])\n",
-    "# display(result)\n",
-    "# result.to_csv(\"D:/University/masters thesis/csv results/red_wine_kernels_classwise_res.csv\")"
+    "result = []\n",
+    "for k in kernels:\n",
+    "    res = model_test_CV(X_train,y_train,method=\"density-based\",kde_kernel=k, kde_classwise=True)\n",
+    "    result.append(res.loc[\"mean\"].values)\n",
+    "result=pd.DataFrame(result, index=kernels,columns=[\"Accuracy\",\"F1 score\", \"time (sec.)\"])\n",
+    "display(result)\n",
+    "result.to_csv(\"D:/University/masters thesis/csv results/red_wine_kernels_classwise_res.csv\")"
    ]
   },
   {
