--- a/exmp.ipynb
+++ b/exmp.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -290,44 +290,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>7.2</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2</td>\n",
+       "      <th>71</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>140</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>5.1</td>\n",
+       "      <th>117</th>\n",
+       "      <td>7.7</td>\n",
        "      <td>3.8</td>\n",
-       "      <td>1.6</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
        "      <td>0.2</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -335,14 +335,14 @@
       ],
       "text/plain": [
        "     sepal_length  sepal_width  petal_length  petal_width  species\n",
-       "125           7.2          3.2           6.0          1.8        2\n",
-       "140           6.7          3.1           5.6          2.4        2\n",
-       "100           6.3          3.3           6.0          2.5        2\n",
-       "123           6.3          2.7           4.9          1.8        2\n",
-       "46            5.1          3.8           1.6          0.2        0"
+       "71            6.1          2.8           4.0          1.3        1\n",
+       "117           7.7          3.8           6.7          2.2        2\n",
+       "2             4.7          3.2           1.3          0.2        0\n",
+       "97            6.2          2.9           4.3          1.3        1\n",
+       "62            6.0          2.2           4.0          1.0        1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -376,14 +376,14 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.9778\n",
-      "F1-score: 0.9786\n"
+      "F1-score: 0.9743\n"
      ]
     }
    ],
    "source": [
     "# Initializing classifier object without randomization\n",
     "pat_cls = fcalc.classifier.PatternClassifier(context=X_train, labels=y_train, \n",
-    "                                            method=\"standard-support\", randomize=False) # other methods: standard, ratio-support\n",
+    "                                            method=\"proximity\", randomize=False)\n",
     "# Computing support\n",
     "pat_cls.compute_support(test=X_test)\n",
     "# Predict the classes for test objects\n",
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -403,14 +403,14 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.9556\n",
-      "F1-score: 0.9556\n"
+      "F1-score: 0.9484\n"
      ]
     }
    ],
    "source": [
     "# Initializing classifier object with randomization\n",
     "pat_cls = fcalc.classifier.PatternClassifier(context=X_train, labels=y_train, \n",
-    "                                            method=\"standard-support\", randomize=True,\n",
+    "                                            method=\"proximity\", randomize=True,\n",
     "                                            num_iters=5, subsample_size=4)\n",
     "# Computing support\n",
     "pat_cls.compute_support(test=X_test)\n",
